integration_tests/codegen_fail/fail/object/derive_fields_unique.rs
#[derive(juniper::GraphQLObject)]
struct Object {
    test: String,
    #[graphql(name = "test")]
    test2: String,
}

fn main() {}
