integration_tests/codegen_fail/fail/object/derive_fields_unique.stderr
error: GraphQL object must have a different name for each field
 --> $DIR/derive_fields_unique.rs:2:1
  |
2 | / struct Object {
3 | |     test: String,
4 | |     #[graphql(name = "test")]
5 | |     test2: String,
6 | | }
  | |_^
  |
  = note: https://spec.graphql.org/June2018/#sec-Objects
